--- a/HappyWayApp/ClientApp/src/app/components/event-members/event-members.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/event-members/event-members.component.html
@@ -6,8 +6,8 @@
   <div class="table-controls">
     <button mat-raised-button (click)="downloadDocData(); docUrlModel.reset();" [disabled]="!docUrlModel.valid">Загрузить</button>
   </div>
-  <div class="scrollable-grid">
-    <table mat-table *ngIf="eventMembers && eventMembers.length > 0" [dataSource]="eventMembers" class="mat-elevation-z8">
+  <div *ngIf="eventMembers" class="scrollable-grid">
+    <table mat-table *ngIf="eventMembers.length > 0; else emptyText" [dataSource]="eventMembers" class="mat-elevation-z8">
       <ng-container matColumnDef="number">
         <th mat-header-cell *matHeaderCellDef>№</th>
         <td mat-cell *matCellDef="let member">{{member.number}}</td>
@@ -40,6 +40,9 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <ng-template #emptyText>
+      <span>Список участников мероприятия пуст.</span>
+    </ng-template>
   </div>
 </ng-container>
 <ng-container *ngIf="!eventId">
