--- a/HappyWayApp/ClientApp/src/app/components/event-places/event-places.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/event-places/event-places.component.html
@@ -1,8 +1,8 @@
 <div class="table-controls">
   <button mat-raised-button (click)="add()">Добавить</button>
 </div>
-<div class="scrollable-grid">
-  <table mat-table *ngIf="eventPlaces && eventPlaces.length > 0" [dataSource]="eventPlaces" class="mat-elevation-z8">
+<div *ngIf="eventPlaces" class="scrollable-grid">
+  <table mat-table *ngIf="eventPlaces.length > 0; else emptyText" [dataSource]="eventPlaces" class="mat-elevation-z8">
     <ng-container matColumnDef="city">
       <th mat-header-cell *matHeaderCellDef>Город</th>
       <td mat-cell *matCellDef="let eventPlace">
@@ -51,4 +51,7 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <ng-template #emptyText>
+    <span>Список мест мероприятий пуст.</span>
+  </ng-template>
 </div>
