--- a/HappyWayApp/ClientApp/src/app/components/groups/groups.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/groups/groups.component.html
@@ -1,8 +1,8 @@
 <div class="table-controls">
   <button mat-raised-button (click)="add()">Добавить</button>
 </div>
-<div class="scrollable-grid">
-  <table mat-table *ngIf="groups && groups.length > 0" [dataSource]="groups" class="mat-elevation-z8">
+<div *ngIf="groups" class="scrollable-grid">
+  <table mat-table *ngIf="groups.length > 0; else emptyText" [dataSource]="groups" class="mat-elevation-z8">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Название</th>
       <td mat-cell *matCellDef="let group">{{group.name}}</td>
@@ -26,4 +26,7 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <ng-template #emptyText>
+    <span>Список групп пуст.</span>
+  </ng-template>
 </div>
