--- a/HappyWayApp/ClientApp/src/app/components/home/home.component.html
+++ b/HappyWayApp/ClientApp/src/app/components/home/home.component.html
@@ -1,51 +1,59 @@
-<ng-container *ngIf="cardMembers && cardMembers.length > 0">
-  <mat-horizontal-stepper (selectionChange)="selectionChanged($event)">
-    <ng-template matStepperIcon="number" let-index="index">
-      {{getMemberNumber(index)}}
-    </ng-template>
-    <mat-step *ngFor="let card of cardMembers">
-      <div class="card-title">
-        {{card.member.name}}
-      </div>
-      <table mat-table *ngIf="card.likedMembers && card.likedMembers.length > 0" [dataSource]="card.likedMembers"
-        class="mat-elevation-z8">
-        <ng-container matColumnDef="number">
-          <th mat-header-cell *matHeaderCellDef>№</th>
-          <td mat-cell *matCellDef="let member">{{member.number}}</td>
-        </ng-container>
-        <ng-container matColumnDef="liked">
-          <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? masterToggle() : null"
-              [checked]="isAllLiked()"
-              [indeterminate]="isAnyLiked() && !isAllLiked()">
-            </mat-checkbox>
-          </th>
-          <td mat-cell *matCellDef="let member">
-            <mat-checkbox [(ngModel)]="member.liked"
-              (click)="$event.stopPropagation()"></mat-checkbox>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Имя</th>
-          <td mat-cell *matCellDef="let member">{{member.name}}</td>
-        </ng-container>
+<ng-container *ngIf="event">
+  <ng-container *ngIf="cardMembers">
+    <ng-container *ngIf="cardMembers.length > 0">
+      <mat-horizontal-stepper (selectionChange)="selectionChanged($event)">
+        <ng-template matStepperIcon="number" let-index="index">
+          {{getMemberNumber(index)}}
+        </ng-template>
+        <mat-step *ngFor="let card of cardMembers">
+          <div class="card-title">
+            {{card.member.name}}
+          </div>
+          <table mat-table *ngIf="card.targetMembers && card.targetMembers.length > 0" [dataSource]="card.targetMembers"
+                 class="mat-elevation-z8">
+            <ng-container matColumnDef="number">
+              <th mat-header-cell *matHeaderCellDef>№</th>
+              <td mat-cell *matCellDef="let member">{{member.number}}</td>
+            </ng-container>
+            <ng-container matColumnDef="liked">
+              <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                              [checked]="isAllLiked()"
+                              [indeterminate]="isAnyLiked() && !isAllLiked()">
+                </mat-checkbox>
+              </th>
+              <td mat-cell *matCellDef="let member">
+                <mat-checkbox [(ngModel)]="member.liked"
+                              (change)="likeMember()"
+                              (click)="$event.stopPropagation()"></mat-checkbox>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>Имя</th>
+              <td mat-cell *matCellDef="let member">{{member.name}}</td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let member; columns: displayedColumns;"
-          (click)="member.liked = !member.liked"></tr>
-      </table>
-    </mat-step>
-  </mat-horizontal-stepper>
-  <div *ngIf="stepper" style="margin-top: 5px;">
-    <button mat-icon-button (click)="goBack()" [disabled]="stepper?.selectedIndex === 0">
-      <mat-icon>navigate_before</mat-icon>
-    </button>
-    <button mat-icon-button (click)="goForward()" [disabled]="stepper?.selectedIndex === stepper?._steps.length-1">
-      <mat-icon>navigate_next</mat-icon>
-    </button>
-    <button mat-raised-button color="primary" (click)="save()">Сохранить</button>
-  </div>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let member; columns: displayedColumns;"
+                (click)="member.liked = !member.liked"></tr>
+          </table>
+        </mat-step>
+      </mat-horizontal-stepper>
+      <div *ngIf="stepper" style="margin-top: 5px;">
+        <button mat-icon-button (click)="goBack()" [disabled]="stepper?.selectedIndex === 0">
+          <mat-icon>navigate_before</mat-icon>
+        </button>
+        <button mat-icon-button (click)="goForward()" [disabled]="stepper?.selectedIndex === stepper?._steps.length-1">
+          <mat-icon>navigate_next</mat-icon>
+        </button>
+        <button mat-raised-button color="primary" (click)="save()">Сохранить</button>
+      </div>
+    </ng-container>
+    <ng-container *ngIf="cardMembers.length === 0">
+      <span>Нет данных об участниках мероприятия.</span>
+    </ng-container>
+  </ng-container>
 </ng-container>
-<ng-container *ngIf="!cardMembers || cardMembers.length === 0">
-  <span>Нет данных об участниках мероприятия.</span>
+<ng-container *ngIf="event === null">
+  <span>Нет данных о текущем мероприятии.</span>
 </ng-container>
